2.4.0 (26-06-2019)
- Improvement: A3es process now can be accessed by coordinators 
- Improvement: A3es minor UI improvements

2.3.0 (14-06-2019)
- Refactor: upgrade ulisboa-specifications dependency