@@ -1,3 +1,5 @@
+- Improvement: A3es teaching services degrees sort order changed
+
 2.4.0 (26-06-2019)
 - Improvement: A3es process now can be accessed by coordinators 
 - Improvement: A3es minor UI improvements
